Closed Bug 1817099 Opened 2 years ago Closed 2 years ago

Message header no longer shows date/time

Categories

(Thunderbird :: Message Reader UI, defect, P3)

Thunderbird 111

Tracking

(thunderbird111 fixed)

RESOLVED FIXED
112 Branch
Tracking Status
thunderbird111 --- fixed

People

(Reporter: thomas8, Assigned: darktrojan)

References

(Blocks 1 open bug)

Details

(Keywords: regression, Whiteboard: [Supernova3p])

Attachments

(3 files)

112.0a1 (2023-02-15) (64-bit), Win10

STR

  • Select a message in thread pane (or open message in a tab)

Actual:

  • Message header no longer shows date/time
  • In 3-pane, need to move eyes away from message reader context and look for date/time in message list - clumsy, higher mental burden
  • In message tab, no way to establish the date/time of the message - ouch

Expected

  • Message header should show date/time in-place, which is very important information
  • Should not force user to visually scan the message list for the date/time

Alex, should this have a higher priority? Not fatal, but imo pretty relevant, exposed and looking unfinished

Flags: needinfo?(alessandro)
Keywords: regression

workflow impact <> accessibility
"Bugs and enhancement requests related to making Firefox accessible to users with disabilities and special needs."

Keywords: access

Assigning this to Elizabeth.
This needs a bit of exploration and digging to figure out why it's not showing up.

Assignee: nobody → elizabeth
Flags: needinfo?(alessandro)

This is apparently the place that is responsible for showing the date:
https://searchfox.org/comm-central/rev/aa8dc0b45f92a64c4b6b98565155693115909b6c/mail/base/content/msgHdrView.js#1234

Nothing is currently done here, because "x-mozilla-localizeddate" isn't found in currentHeaderData.

That value is created in mailnews/mime/emitters/nsMimeHtmlEmitter.cpp

Using the debugger I confirmed that the code producing the attribute is still reached.
So apparently the attribute is no longer passed along to the JS variable currentHeaderData.

Did the processing of MIME headers change recently (in ash)?

I'll attach a quick hack in order to display at least something.
But that isn't the right fix, because we likely want to continue to show the original localized string that's created by the C++ code?

Thank you so much Kai for the analysis and the WIP patch.
Gentle ping to Geoff to see if he has any hint on what it might be happening.

Assignee: elizabeth → nobody
Flags: needinfo?(geoff)

Did this happen recently or has it been broken since we merged ash and I just never noticed?

I can use mozregression and figure it out

Never mind, found it.

Assignee: nobody → geoff
Status: NEW → ASSIGNED
Flags: needinfo?(geoff)

It was broken by the ash merge.

Also removes the header enumerators, because they aren't doing anything any more.

Attachment #9319078 - Attachment description: WIP: Bug 1817099 - Emit X-Mozilla-LocalizedDate to the MailChannel. r=#thunderbird-reviewers → Bug 1817099 - Emit X-Mozilla-LocalizedDate to the MailChannel. r=aleca
Target Milestone: --- → 112 Branch

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/06ae41c28984
Emit X-Mozilla-LocalizedDate to the MailChannel. r=aleca

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Attachment #9319078 - Flags: approval-comm-beta?

Comment on attachment 9319078 [details]
Bug 1817099 - Emit X-Mozilla-LocalizedDate to the MailChannel. r=aleca

[Triage Comment]
Approved for beta

Attachment #9319078 - Flags: approval-comm-beta? → approval-comm-beta+
Whiteboard: [Supernova] → [Supernova3p]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: