Bug 1817099 - Emit X-Mozilla-LocalizedDate to the MailChannel. r=aleca Also removes the header enumerators, because they aren't doing anything any more.

Differential Revision: https://phabricator.services.mozilla.com/D170536

--HG--
extra : amend_source : ae4f6349564e3d998188bf1f7375af3c9d62cf81